<resources>
    <string name="app_name">Dados</string>
    <string name="roller_name">roller_name</string>
    <string name="result">result</string>
    <string name="roll">roll</string>
    <string name="dice">Dice</string>
    <string name="history">History</string>
    <string name="preview">Preview</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="gave">Gave</string>
</resources>