<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_history_dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80sp"
        android:layout_marginTop="5sp"
        android:text="@string/dice"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_history_gave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/gave"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@id/tv_history_result"
        app:layout_constraintStart_toEndOf="@id/tv_history_dice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_history_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="80sp"
        android:text="@string/result"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>