<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_roller_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/roller_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_marginTop="50sp"
        android:textSize="30sp"
        />

    <ImageView
        android:layout_width="200sp"
        android:layout_height="200sp"
        app:layout_constraintTop_toBottomOf="@id/tv_roller_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/dado_d6"
        android:layout_marginTop="50sp"
        android:id="@+id/im_roller"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/im_roller"
        android:text="@string/result"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_marginTop="50sp"
        android:textSize="30sp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll"
        android:textAllCaps="true"
        android:id="@+id/bt_roll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        android:layout_marginTop="20sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>